# AnnoEdit

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
hkanno64/: INSTALL-HCT-en.txt  win32.hkx
